--- a/.github/workflows/child_one.yml
+++ b/.github/workflows/child_one.yml
@@ -8,21 +8,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a child one workflow
-        run: echo Child one want to call her root!
-  useWorkflowRoot:
-    uses: Thierno-kub/generics_workflows1/.github/workflows/root_pipeline.yml@main
+#  useWorkflowRoot:
+#    uses: Thierno-kub/generics_workflows1/.github/workflows/root_pipeline.yml@main
   useexplorerworkflow:
     uses: /KUBA-ENG-Platform/refactored-workflow-kuba-contract/.github/workflows/explorer.yml@main
     with:
